--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN=OTI5NjMxOTg4MTA3ODM3NDUx.YdqJQQ.rI9WDTAyHJwyAXMEOVrbGuWpFz4
+TOKEN=OTMzMDU0ODA5MzYyMjg4NzMy.Yeb9AQ.zTA5djAvPOVMM1a8PTdLnTFWx6o
 PORT=3306
