--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ws": "^8.4.0"
   },
 	"scripts":  {
-		"start": "node run.js"
+		"start": "node index.js"
 	},
 	"engines": {
 		"node": "16.13.1"
