--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "dependencies": {
+    "crypto": "^1.0.1",
     "discord.js": "^13.5.1",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "mysql": "^2.18.1",
     "sellix-api-wrapper": "^1.0.7",
+    "uuid": "^8.3.2",
     "ws": "^8.4.0"
   },
-	"scripts":  {
-		"start": "node index2.js"
-	},
-	"engines": {
-		"node": "16.13.1"
-	}
+  "scripts": {
+    "start": "node index2.js"
+  },
+  "engines": {
+    "node": "16.13.1"
+  }
 }
