--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "mysql": "^2.18.1"
+  },
+  "scripts": {
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "16.13.1"
   }
 }
