--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "discord.js": "^13.6.0",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "fs": "^0.0.1-security",
     "mysql": "^2.18.1"
   },
   "scripts": {
