yey test new version hope it works

--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-DISCORD_TOKEN=OTMzMDU0ODA5MzYyMjg4NzMy.Yeb9AQ.zTA5djAvPOVMM1a8PTdLnTFWx6o
-DBUSER=NotRllyAtm
-DBPASS=P.ssDBW.rd1-!RNA
-DBURL=arduinodb.cmvnlhqpj9tj.us-east-1.rds.amazonaws.com
+TOKEN=OTMzMDU0ODA5MzYyMjg4NzMy.Yeb9AQ.zTA5djAvPOVMM1a8PTdLnTFWx6o
+YARISKEY=dQhPyXTb5eK6
 PREFIX=;
