--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "crypto": "^1.0.1",
     "discord.js": "^13.6.0",
     "dotenv": "^14.3.2",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "fs": "^0.0.1-security",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-fetch": "^3.2.3"
   },
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
