--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
-    "node-fetch": "^3.2.3"
+    "node-fetch": "^3.2.3",
+    "yaris-wrapper": "^1.0.9"
   },
   "type": "module",
   "scripts": {
